# waveform-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/waveform_mcp/: __init__.py  server.py
tests/: test_server.py
