[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waveform-mcp"
version = "0.1.0"
description = "MCP server for RTL waveform analysis using WAL"
readme = "README.md"
authors = [{name = "Yossi Nivin"}]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "wal-lang>=0.8.0",
    "pylibfst",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black>=22.0",
    "ruff>=0.1.0",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "F", "W", "I", "N", "UP"]